--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -5,7 +5,8 @@ section.filters {
 	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 	vertical-align: middle;
-	display: table-cell;
+	padding: 0px;
+	margin: 0px;
 }
 button {
 	font-size: 18px;
@@ -15,8 +16,7 @@ button {
 	width: 20%;
 	border: none;
 	border-radius: 4px;
-	position: relative;
-	right: 30px;
+	margin: 11px 30px 0px 0px;
 	float: right;
 }
 button:hover {
